--- a/Views/Solutions/Index.cshtml
+++ b/Views/Solutions/Index.cshtml
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.Added)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Query.QueryID)
+                @Html.DisplayFor(modelItem => item.Query.Description)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Employee.FName)
