--- a/Views/Queries/Edit.cshtml
+++ b/Views/Queries/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="QueryID" />
             <div class="form-group">
@@ -20,22 +20,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="QState" class="control-label"></label>
-                <select asp-for="QState" class="form-control"></select>
+                <select asp-for="QState" class="form-control" asp-items="@Html.GetEnumSelectList<States>()"></select>
                 <span asp-validation-for="QState" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Added" class="control-label"></label>
-                <input asp-for="Added" class="form-control" />
-                <span asp-validation-for="Added" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EmployeeID" class="control-label"></label>
-                <select asp-for="EmployeeID" class="form-control" asp-items="ViewBag.EmployeeID"></select>
-                <span asp-validation-for="EmployeeID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Tag" class="control-label"></label>
-                <select asp-for="Tag" class="form-control"></select>
+                <select asp-for="Tag" class="form-control" asp-items="@Html.GetEnumSelectList<Tags>()"></select>
                 <span asp-validation-for="Tag" class="text-danger"></span>
             </div>
             <div class="form-group">
