--- a/Views/Solutions/Create.cshtml
+++ b/Views/Solutions/Create.cshtml
@@ -4,31 +4,21 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Solution</h4>
+<h4>Give Solution</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ID" class="control-label"></label>
-                <input asp-for="ID" class="form-control" />
-                <span asp-validation-for="ID" class="text-danger"></span>
-            </div>
+            <p class="font-weight-bolder">Query : @ViewData["queryDesc"]</p>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EmployeeID" class="control-label"></label>
-                <select asp-for="EmployeeID" class ="form-control" asp-items="ViewBag.EmployeeID"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="QueryID" class="control-label"></label>
-                <select asp-for="QueryID" class ="form-control" asp-items="ViewBag.QueryID"></select>
+                <label>Upload File</label>
+                <input type="file" name="file"/>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
