--- a/Views/Queries/Create.cshtml
+++ b/Views/Queries/Create.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Tag" class="control-label"></label>
-                <select asp-for="Tag" class="form-control" asp-items="Html.GetEnumSelectList<Tags>()">
+                <select asp-for="Tag" class="form-control" asp-items="Html.GetEnumSelectList<Expertise>()">
                 </select>
                 <span asp-validation-for="Tag" class="text-danger"></span>
             </div>
