--- a/Views/Solutions/Details.cshtml
+++ b/Views/Solutions/Details.cshtml
@@ -10,33 +10,50 @@
     <h4>Solution</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            Artifacts
+        </dt>
+        <dd class="col-sm-10">
+            @{
+                var artifact = @Model.Artifact ?? null;
+
+                string Name = String.Empty;
+                if(artifact != null)
+                {
+                    Name = artifact.Name;
+                }
+            }
+
+           <a asp-controller="Download" asp-action="Download" asp-route-filename="@Name">@Name</a>
+           
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Added)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Added)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Query)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Query.QueryID)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Query.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Employee)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Employee.FName)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Employee.FullName)
         </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-queryID="@Model.QueryID">Back to List</a>
 </div>
