--- a/Views/Solutions/Edit.cshtml
+++ b/Views/Solutions/Edit.cshtml
@@ -10,28 +10,17 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control">@Model.Description</textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Added" class="control-label"></label>
-                <input asp-for="Added" class="form-control" />
-                <span asp-validation-for="Added" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EmployeeID" class="control-label"></label>
-                <select asp-for="EmployeeID" class="form-control" asp-items="ViewBag.EmployeeID"></select>
-                <span asp-validation-for="EmployeeID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="QueryID" class="control-label"></label>
-                <select asp-for="QueryID" class="form-control" asp-items="ViewBag.QueryID"></select>
-                <span asp-validation-for="QueryID" class="text-danger"></span>
+                <label>Upload File</label>
+                <input type="file" name="file"/>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -41,7 +30,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-queryID="@Model.QueryID">Back to List</a>
 </div>
 
 @section Scripts {
