--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -2,3 +2,63 @@
 .clickable {
     cursor: pointer;
 }
+
+.w-8 {
+    width: 8rem;
+}
+
+
+/*TABLE*/
+.styled-table {
+    border-collapse: collapse;
+    margin: 1.5rem 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 25rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.styled-table thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 0.75rem 1rem;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
+}
+
+/*LINKS*/
+
+
+.link {
+    text-decoration: none;
+    color: #f3f3f3;
+    border: 1px solid #dddddd;
+    padding: .5rem;
+}
+
+.link:hover {
+    text-decoration: none;
+    color: #009879;
+    background-color: #f3f3f3;
+    transition: all .2s;
+}
