--- a/Views/Solutions/Create.cshtml
+++ b/Views/Solutions/Create.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label>Upload File</label>
+                <label>Upload File</label><br />
                 <input type="file" name="file"/>
             </div>
             <div class="form-group">
