--- a/Views/Solutions/Details.cshtml
+++ b/Views/Solutions/Details.cshtml
@@ -54,6 +54,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index" asp-route-queryID="@Model.QueryID">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.ID" class="btn btn-warning">Edit</a> 
+    <a asp-action="Delete" asp-route-id="@Model.ID" class="btn btn-danger">Delete</a> 
+    <a asp-action="Index" asp-route-queryID="@Model.QueryID" class="btn btn-secondary">Back to List</a>
 </div>
