--- a/Views/Employees/Details.cshtml
+++ b/Views/Employees/Details.cshtml
@@ -1,30 +1,52 @@
-﻿@model TekDesk.Models.Employee
+﻿@model TekDesk.Models.TekDeskViewModels.EmployeeExpertiseData
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1 class="display-4">Details</h1>
 
-<div>
+<div class="border p-3">
     <h4>Employee</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FName)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Employee.ID)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FName)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Employee.ID)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LName)
+            @Html.DisplayNameFor(model => model.Employee.FullName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LName)
+            @Html.DisplayFor(model => model.Employee.FullName)
+        </dd>
+        <dt class="col-sm-2">
+            Employee Expertise
+        </dt>
+        <dd>
+            <table class="table styled-table">
+                <thead>
+                    <tr>
+                        <td>Subject ID</td>
+                        <td>Subject Name</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.EmployeeSubjects)
+                    {
+                        <tr>
+                            <td>@item.Subject.ID</td>
+                            <td>@item.Subject.Name</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+          
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
