--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav  ml-auto">
+                    <ul class="navbar-nav  ml-auto">    
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -37,7 +37,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employees" asp-action="Index">Employees</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Employees" asp-action="Notification"><i class="far fa-bell"></i></a>
+                            <a class="nav-link text-dark m-1 p-1" asp-area="" asp-controller="Employees" asp-action="Notification"><i class="far fa-bell fa-lg"></i></a>
                         </li>
                     </ul>
                 </div>
