--- a/Views/Solutions/Index.cshtml
+++ b/Views/Solutions/Index.cshtml
@@ -69,6 +69,7 @@
     <ul class="pagination justify-content-end">
         <li class="page-item @prevDisabled">
             <a asp-action="Index"
+               asp-route-queryID="@ViewData["queryID"]"
                asp-route-sortOrder="@ViewData["CurrentSort"]"
                asp-route-pageNumber="@(Model.PageIndex - 1)"
                asp-route-currentFilter="@ViewData["CurrentFilter"]"
@@ -85,6 +86,7 @@
             <li class="page-item">
                 <a class="page-link @activePage"
                    asp-action="Index"
+                   asp-route-queryID="@ViewData["queryID"]"
                    asp-route-sortOrder="@ViewData["CurrentSort"]"
                    asp-route-pageNumber="@i"
                    asp-route-currentFilter="@ViewData["CurrentFilter"]">
@@ -94,6 +96,7 @@
         }
         <li class="page-item @nextDisabled">
             <a asp-action="Index"
+               asp-route-queryID="@ViewData["queryID"]"
                asp-route-sortOrder="@ViewData["CurrentSort"]"
                asp-route-pageNumber="@(Model.PageIndex + 1)"
                asp-route-currentFilter="@ViewData["CurrentFilter"]"
