--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,10 +2,23 @@
     ViewData["Title"] = "Home Page";
 }
 
+@{
+    var EmployeeExist = Convert.ToBoolean(TempData["EmployeeExists"]);
+    var firstLogin = !TempData.ContainsKey("EmployeeExists");
+}
+
+@if (!EmployeeExist && !firstLogin)
+{
+    <div class="alert alert-danger" role="alert">
+        @TempData["Message"]
+    </div>
+}
+
+
 <div class="row justify-content-center">
     <div class="col-md-4 h-100 border px-3 py-4">
         <h2 class="mb-4">Login</h2>
-        <form asp-action="Store" method="post" asp-route-empId="">
+        <form asp-action="Store" method="post">
             <div class="mb-3">
                 <label for="EmployeeId" class="form-label">Employee Id</label>
                 <input type="text" name="empId" class="form-control" id="EmployeeId" aria-describedby="EmployeeId">
