--- a/Views/Solutions/Index.cshtml
+++ b/Views/Solutions/Index.cshtml
@@ -10,7 +10,7 @@
         <form asp-action="Index" method="get">
             <div class="form-actions no-color">
                 <p class="my-auto">
-                    Search by name: <input type="text" name="searchTerm" value="@ViewData["SearchTerm"]" />
+                    Search by name: <input type="text" name="searchTerm" value="@ViewData["CurrentFilter"]" />
                     <input type="submit" value="Search" class="btn btn-outline-primary" />
                     <input type="hidden" name="queryID" value="@ViewData["queryID"]" />
                     <a asp-action="Index" asp-route-queryID="@ViewData["queryID"]" class="btn btn-secondary">Back to Full List</a>
