--- a/Views/Queries/Create.cshtml
+++ b/Views/Queries/Create.cshtml
@@ -1,12 +1,8 @@
 ﻿@model TekDesk.Models.Query
 
-@{
-    ViewData["Title"] = "Create";
-}
 
-<h1>Create</h1>
+<h1>Create New Query</h1>
 
-<h4>Query</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
